Bugfix:  Overflow scroll was applied incorrectly to PNS tables.
Adjusted DOM structure and SCSS rules to fix so that tables are displayed correctly with 500px height and scrollable overflow.

--- a/wp-content/themes/cnmi-pss/scss/modules/_tables.scss
+++ b/wp-content/themes/cnmi-pss/scss/modules/_tables.scss
@@ -44,11 +44,14 @@
         }
     }
 
+    .table-box {
+        max-height: 500px;
+        overflow-y: scroll;
+    }
+
     table.lookup-list {
         border-left: 1px solid #ddd;
         margin-top: 15px;
-        max-height: 500px;
-        overflow-y: scroll;
 
         caption {
             text-align: center;
